Fixed the photo showcase causing overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,10 +60,13 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    overscroll-behavior-y: contain;
-    background-color: #F5F5DC!important;
+    /*overflow-x: hidden;*/
+    /*overscroll-behavior-y: contain;*/
+    /*background-color: #F5F5DC!important;*/
 }
+/*.page-wrapper {*/
+/*    width: 100% !important;*/
+/*}*/
 
 /*body {*/
 /*    overflow-y: scroll !important;*/
